tests/transpiler/x/java/group_by_having.error
exit status 1
Main.java:17: error: cannot find symbol
    static java.util.List<Result4> big = new java.util.ArrayList<Result4>() {{ java.util.LinkedHashMap<String,Group2> _groups = new java.util.LinkedHashMap<>(); java.util.ArrayList<Result4> _tmp = new java.util.ArrayList<>(); for (var p : people) { var _k = ((Integer) (p.get("city"))); String _ks = String.valueOf(_k); Group2 g = _groups.get(_ks); if (g == null) { g = new Group2(_k, new java.util.ArrayList<>()); _groups.put(_ks, g); } g.items.add(p); } java.util.ArrayList<Group2> list = new java.util.ArrayList<>(_groups.values()); int skip = 0; int take = -1; for (int i = 0; i < list.size(); i++) { if (i < skip) continue; if (take >= 0 && i >= skip + take) break; var g = (Group2)list.get(i); if (g.items.size() >= 4) { _tmp.add(new Result4(g.key, g.items.size())); } } addAll(_tmp);}};
                                                                                                                                                                                                                                                                               ^
  symbol:   method get(String)
  location: variable p of type Data1
Main.java:17: error: incompatible types: Integer cannot be converted to String
    static java.util.List<Result4> big = new java.util.ArrayList<Result4>() {{ java.util.LinkedHashMap<String,Group2> _groups = new java.util.LinkedHashMap<>(); java.util.ArrayList<Result4> _tmp = new java.util.ArrayList<>(); for (var p : people) { var _k = ((Integer) (p.get("city"))); String _ks = String.valueOf(_k); Group2 g = _groups.get(_ks); if (g == null) { g = new Group2(_k, new java.util.ArrayList<>()); _groups.put(_ks, g); } g.items.add(p); } java.util.ArrayList<Group2> list = new java.util.ArrayList<>(_groups.values()); int skip = 0; int take = -1; for (int i = 0; i < list.size(); i++) { if (i < skip) continue; if (take >= 0 && i >= skip + take) break; var g = (Group2)list.get(i); if (g.items.size() >= 4) { _tmp.add(new Result4(g.key, g.items.size())); } } addAll(_tmp);}};
                                                                                                                                                                                                                                                                                                                                                                                             ^
Main.java:48: error: cannot find symbol
        json(big);
        ^
  symbol:   method json(List<Result4>)
  location: class Main
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors
